2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c: Include <loader.h>.  Don't include "loader.h".
	(system_task_load): Update user of loader_elf_load to new API.
	* loader.h: Move to ../libc-parts.
	* loader.c: Move to ../libc-parts.
	* elf.h: Move to ../libc-parts.
	* Makefile.am (viengoos_SOURCES): Remove elf.h, loader.h and
	loader.c.

2008-01-25  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (viengoos_LDADD): Fix link order.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* as.h (as_insert): Rename argument AS_ROOT_ADDR to TARGET_AS.
	Take additional argument SOURCE_AS.  Update users.
	* as.c (as_build_internal): Update use of cap_copy_x to be
	consistent with new API.
	(as_insert): Take additional argument ENTRY_AS.  Update use of
	cap_copy to be consistent with new API.
	* cap.h (cap_set): Update use of cap_copy to be consistent with
	new API.
	* thread.c (thread_exregs): Update use of cap_copy and cap_copy_x
	to be consistent with new API.

	* as.h (as_slot_ensure_full): New declaration.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* viengoos.c (system_task_load): When allocating the activity and
	thread, pass ADDR_VOID as the address to allocate_object.  On
	return, set the object's descriptor to designate the allocated
	storage.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (SLOT_): Take additional argument root.  Use it rather
	than THREAD->ASPACE.  Update users.
	(SLOT): Likewise.
	(CAP_): Likewise.
	(CAP): Likewise.
	(ROOT): New macro.
	(server_loop): Update cap_read, object_slot_copy_out,
	object_slot_copy_in, object_slot_read, cap_copy_x, and cap_copy
	method implementations to new API.
	* as.h (as_insert): Take additional argument AS_ROOT_ADDR.
	Update users.
	* as.c (as_build_internal): Take additional argument
	AS_ROOT_ADDR.  Pass it to cap_copy_x.
	(as_slot_ensure_full): Take additional argument AS_ROOT_ADDR.
	Pass it to as_build_internal.
	(as_insert): Likewise.